--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-#spring.mvc.view.prefix: /WEB-INF/jsp/
-#spring.mvc.view.suffix: .jsp
+spring.mvc.view.prefix: /WEB-INF/jsp/
+spring.mvc.view.suffix: .jsp
 #spring.resources.static-locations=/webjars/spring-react-frontend/0.0.1-SNAPSHOT/
